gitops/apps/workloads/podinfo/base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: podinfo
spec:
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: podinfo
  template:
    metadata:
      labels:
        app: podinfo
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: podinfo
          image: ghcr.io/stefanprodan/podinfo@sha256:862ca45e61b32392f7941a1bdfdbe5ff8b6899070135f1bdca1c287d0057fc94
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9898
          args:
            - --port=9898
            - --cache-server-port=9797
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            privileged: false
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
  strategy:
    canary:
      stableService: podinfo-stable
      canaryService: podinfo-canary
      maxSurge: 1
      maxUnavailable: 0
      abortScaleDownDelaySeconds: 30
      steps:
        - setWeight: 20
        - pause:
            duration: 45s
        - analysis:
            templates:
              - templateName: podinfo-success-rate
              - templateName: podinfo-latency-p95
        - setWeight: 50
        - pause:
            duration: 60s
        - analysis:
            templates:
              - templateName: podinfo-success-rate
              - templateName: podinfo-latency-p95
        - setWeight: 100
