gitops/apps/workloads/podinfo/base/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo-stable
spec:
  selector:
    app: podinfo
  ports:
    - name: http
      port: 9898
      targetPort: http
